fixed surival rate display index bug, better input spacing

--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,7 @@ p {
  /* height: 10px */
  display: flex;
  justify-content: space-between;
+ margin-bottom: .5rem;
 }
 
 .fleets form {
